--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".Activities.RelatedPersonImageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.IndivdualPhotoActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activities.CustomerDataActivity"
             android:exported="false" />
         <activity
